--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FocusFlow - AI Productivity Assistant</title>
+    <link rel="icon" type="image/png" href="icon.png" />
     <meta name="description" content="A lightweight AI productivity assistant that helps creators brainstorm, summarize, and transform content.">
   </head>
   <body>
